# ConvoSaver

./: .gitignore  CHANGELOG.md  README.md  agents.md  docker-compose.yml  pyproject.toml
convosaver/: __init__.py  core.py  models.py  mysql_store.py  rbac.py  stores.py  utils.py
examples/: basic.py  mysql.py
tests/: test_rbac.py
